[metadata]
name = discourse
version = 0.1.2
description = A Python wrapper of the Discourse API
long_description = file: README.md
author = Sam Morgan
author_email = sama4mail@gmail.com
url = https://github.com/samamorgan/discourse
download_url = https://github.com/samamorgan/discourse/archive/master.zip
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
	requests

[flake8]
max-line-length = 88
